--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="index.css">
-<script src="index.js"></script>
-<title> Site </title>
+<title> Sample </title>
 </head>
 <strong>Sample</strong>
 <body>
